# creator-white-label

./: .gitignore  shell.nix
server/: .env.example  Cargo.toml
server/migrations/2021-03-25-133058_create_folder/: up.sql
server/migrations/2021-03-26-125735_create_users/: up.sql
server/migrations/2021-03-26-125757_create_apps/: up.sql
server/migrations/2021-03-26-125803_create_materials/: down.sql  up.sql
server/migrations/2021-03-26-125812_create_dimensions/: down.sql  up.sql
server/migrations/2021-03-26-125814_create_fixations/: down.sql  up.sql
server/migrations/2021-03-26-125820_create_discounts/: down.sql  up.sql
server/migrations/2021-03-26-125830_create_fonts/: down.sql  up.sql
server/migrations/2021-03-26-125832_create_pictos/: down.sql  up.sql
server/migrations/2021-03-26-125836_create_shapes/: down.sql  up.sql
server/migrations/2021-03-27-202432_create_app_users/: down.sql  up.sql
server/migrations/2021-03-29-090603_create_app_materials/: down.sql  up.sql
server/migrations/2021-03-29-153059_create_material_dimensions/: down.sql  up.sql
server/migrations/2021-03-30-085722_create_material_discounts/: down.sql  up.sql
server/migrations/2021-03-30-102426_create_app_fonts/: down.sql  up.sql
server/migrations/2021-04-12-133740_create_material_fixations/: down.sql  up.sql
server/src/: app.rs  auth.rs  badge.rs  database.rs  dimension.rs  discount.rs  fixation.rs  fixation_condition.rs  font.rs  lib.rs  main.rs  material.rs  models.rs  order.rs  picto.rs  schema.rs  shape.rs  template.rs  upload.rs  user.rs
server/src/shared/: auth.rs  (+5 more)
(+224 files in other folders)
