[package]
name = "creator-server"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2018"

[lib]
name = "creator_server"
proc-macro = true

[dependencies]
actix-cors = "0.5.4"
actix-files = "0.5.0"
actix-multipart = "0.3.0"
actix-web = "3.3.2"
actix-web-httpauth = "0.5.1"
bcrypt = "0.9.0"
diesel = { version = "1.4.6", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
error-chain = "0.12.4"
futures = "0.3.13"
jsonwebtoken = "7.2.0"
log = "0.4.14"
quote = "1.0.9"
r2d2 = "0.8.9"
sanitize-filename = "0.3.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
strsim = "0.10.0"
syn = "1.0.67"
uuid = { version = "0.8.2", features = ["v4"] }
